Closed Bug 1351660 Opened 7 years ago Closed 7 years ago

Intermittent js/src/jit-test/tests/asm.js/testBug1301191.js | Assertion failure: codeRange_->kind() == CodeRange::Function

Categories

(Core :: JavaScript Engine: JIT, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox52 --- unaffected
firefox-esr52 --- unaffected
firefox53 --- unaffected
firefox54 --- unaffected
firefox55 --- fixed

People

(Reporter: aryx, Assigned: bbouvier)

References

Details

(Keywords: assertion, intermittent-failure)

Attachments

(1 file)

https://treeherder.mozilla.org/logviewer.html#?job_id=87230066&repo=mozilla-inbound

[task 2017-03-29T10:05:15.619465Z] Assertion failure: codeRange_->kind() == CodeRange::Function, at /home/worker/workspace/build/src/js/src/wasm/WasmFrameIterator.cpp:81
[task 2017-03-29T10:05:15.619522Z] Exit code: -11
[task 2017-03-29T10:05:15.619556Z] FAIL - asm.js/testBug1301191.js
[task 2017-03-29T10:05:15.619708Z] TEST-UNEXPECTED-FAIL | js/src/jit-test/tests/asm.js/testBug1301191.js | Assertion failure: codeRange_->kind() == CodeRange::Function, at /home/worker/workspace/build/src/js/src/wasm/WasmFrameIterator.cpp:81 (code -11, args "--ion-eager --ion-offthread-compile=off")
[task 2017-03-29T10:05:15.619750Z] INFO exit-status     : -11
[task 2017-03-29T10:05:15.619787Z] INFO timed-out       : False
[task 2017-03-29T10:05:15.619881Z] INFO stderr         2> Assertion failure: codeRange_->kind() == CodeRange::Function, at /home/worker/workspace/build/src/js/src/wasm/WasmFrameIterator.cpp:81
So this assert was justified by the fact that we only call setResumePC() when containsFunctionPC(pc).  But what I think is happening here is that, in the case of the simulator, we'll interrupt at pc X, but then we let the simulator finish executing X before calling setResumePC on the new PC.  If X jumps to a stub, then the new PC won't be in function code.
Attached patch patch.txtSplinter Review
Assignee: nobody → bbouvier
Status: NEW → ASSIGNED
Attachment #8852523 - Flags: review?(luke)
Attachment #8852523 - Attachment is patch: true
Comment on attachment 8852523 [details] [diff] [review]
patch.txt

Review of attachment 8852523 [details] [diff] [review]:
-----------------------------------------------------------------

Thanks!
Attachment #8852523 - Flags: review?(luke) → review+
https://hg.mozilla.org/mozilla-central/rev/f6b79ec14c6a
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: