Bug 1351660: Baldr: In non-profiling mode, don't assume we got interrupted in a function; r=luke

Stubs can be inserted between functions (e.g FarJumpIsland stubs), so we can't
assume we have a Function code range (i.e. we have a Frame) if resumePC was
set in the WasmActivation.

Also, the ARM simulator has to finish executing the current instruction and the
next value of pc read and set to WasmActivation's resumePC could not be in a
Function code range.

MozReview-Commit-ID: HLuomZWdkMe